--- a/exampleConfig.json
+++ b/exampleConfig.json
@@ -19,5 +19,6 @@
   "host": "0.0.0.0",
   "port": 8125,
   "managementport": 8126,
-  "checkInterval": 1000
+  "checkInterval": 1000,
+  "mirror": false
 }
