--- a/exampleConfig.json
+++ b/exampleConfig.json
@@ -18,6 +18,7 @@
   ],
   "host": "0.0.0.0",
   "port": 8125,
+  "managementhost": "0.0.0.0",
   "managementport": 8126,
   "checkInterval": 1000,
   "mirror": false
